(include_subdirs unqualified)

(library
  (name compiler)
  (modules 
    ast 
    check 
    compile 
    desugar
    lex
    parse
    parser 
    preprocess 
    prettyprint 
    runtime 
    warnings
    optimizations
    constant_fold
    dead_code_elimination
    no_effect
    peephole)
  (libraries util asm core)
  (preprocess (pps ppx_blob))
  (preprocessor_deps 
    (file runtime/multiply.3000.s)
    (file runtime/divide.3000.s)
    (file runtime/sign_utils.3000.s)
    (file runtime/assert.3000.s)
    (file runtime/lcd_init.3000.s)
    (file runtime/print_lcd.3000.s)))

(env
  (dev
    (flags (:standard -warn-error -A))))