(tests 
  (names 
    test_assembler 
    test_emulator 
    test_compiler 
    test_parser 
    test_runtime 
    test_checker 
    test_preprocessor 
    test_constant_folding
    test_peephole
    test_desugar)
  (libraries ounit2 asm emulator compiler util))

(env
  (dev
    (flags (:standard -warn-error -A))))