(tests 
  (names 
    test_assembler 
    test_emulator 
    test_compiler 
    test_parser 
    test_runtime 
    test_checker 
    test_preprocessor 
    test_constant_folding
    test_dead_code_elim
    test_peephole
    test_desugar
    test_no_effect)
  (libraries ounit2 asm emulator compiler util))

(env
  (dev
    (flags (:standard -warn-error -A))))